--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
   "bugs": {
     "url": "https://github.com/Anirudh-sk/aet-npm-package/issues"
   },
-  "homepage": "https://github.com/Anirudh-sk/aet-npm-package#readme"
+  "homepage": "https://github.com/Anirudh-sk/aet-npm-package#readme",
+
+  "engines": {
+    "npm": ">=6.0.0",
+    "node": ">=10.0.0"
+  }
 }
